Fix blur hack by reverting to .3px + hide main elts overflow (temp)

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,7 +5,7 @@ html, body, #__nuxt {
 	height: 100%;
 	font-family: 'Din';
 	font-weight: normal;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 ul {
